# aatp-protocol

./: .gitignore  LICENSE-CODE  LICENSE-DOCS  README (9).md  README.md  conceptual-framework-v0.44.md  pyproject.toml
aatp_agent/: __init__.py
aatp_auditor/: __init__.py
aatp_core/: __init__.py  canonical.py  chain.py  crypto.py  record.py  session.py  storage.py  uuid7.py
aatp_recorder/: __init__.py
aatp_reviewer/: __init__.py
diagrams/: AATP_Flow_0_Mode_Comparison.mermaid  AATP_Flow_1_Solo_Mode.mermaid  AATP_Flow_2_Unilateral_Mode.mermaid  AATP_Flow_3_Bilateral_Mode.mermaid  AATP_Implementation_Architecture.mermaid
docs/: AATP-Operating-Cost-Report-v0.1.md  AATP_Philosophical_Memo_Multi_LLM_Convergence.md  AATP_Research_Note_World_State_Integrity (2).md  AATP_Research_Note_World_State_Integrity.md  ROADMAP.md  conceptual-framework-v0.45.md  governance-v0.21.md
docs/profiles/: AATP-ACP-Profile-v0.1.md  AATP-Finance-Profile-v0.1.md  AATP-LAEP-Profile-v0.1.md
examples/: demo_bilateral.py  demo_solo.py  demo_solo_audit_llm.py  demo_solo_llm.py  demo_tamper.py  demo_violation.py
examples/data/: events.json  world_state.json
examples/output/: audit_demo.db  audit_report.json  auditor_raw.json  llm_responses.json  purpose_chain.json  trail_llm.json
test/: golden_bilateral.json  golden_record.json  test_aatp.py  test_auditor.py  test_bilateral.py  test_conformance.py  test_recorder.py  test_reviewer.py  test_session.py  test_stage3_updates.py
tools/: __main__.py  aatp_cli.py  dashboard.py
tools/templates/: dashboard.html
