[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aatp-protocol"
version = "0.1.0"
description = "Auditable Agent Transaction Protocol — reference implementation SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Changxiao Huang (Norland)", email = "mrooxx@users.noreply.github.com" },
]
keywords = ["ai-agents", "audit", "accountability", "protocol", "transparency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/mrooxx/aatp-protocol"
Documentation = "https://github.com/mrooxx/aatp-protocol/blob/main/docs/conceptual-framework-v0.44.md"
Repository = "https://github.com/mrooxx/aatp-protocol"
Issues = "https://github.com/mrooxx/aatp-protocol/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
